# DEXPI2graphML

./: .gitignore  README.md  main.py  pyproject.toml
assets/dxf_components/: #check_valve_with_flange.dxf  ANNOT_LINE_TRACE.dxf  CI.dxf  CL.dxf  CL2.dxf  CLTest.dxf  CL_replaced.dxf  CL_replaced_rot-90.dxf  CL_replaced_rot0.dxf  CL_replaced_rot180.dxf  CL_replaced_rot270.dxf  CL_replaced_rot90.dxf  CM.dxf  CR.dxf  DRAIN_VALVE.dxf  Desiccant_breather_observation_port.dxf  Diaphragm_Head.dxf  Drawing2.dxf  Drawing3.dxf  FGL.dxf  LEFT_BALL_CLOSE_VALVE.dxf  LEFT_BALL_MOTOR_CLOSE_VALVE.dxf  LEFT_BALL_MOTOR_OPEN_VALVE.dxf  LEFT_BALL_PISTON_OPEN_VALVE.dxf  LEFT_GATE_MOTOR_OPEN.dxf  LEFT_GATE_OPEN.dxf  LEFT_GATE_OPEN_VALVE.dxf  LEFT_GATE_OPEN_mirrored.dxf  LEFT_GLOBE_CLOSE.dxf  LEFT_GLOBE_CLOSE_mirrored.dxf  LEFT_GLOBE_MOTOR_CLOSE.dxf  LEFT_GLOBE_MOTOR_OPEN.dxf  LEFT_GLOBE_PISTON_OPEN.dxf  LEFT_HAND_CONTROL_OPEN_VALVE.dxf  LGUT1.dxf  LGUT2.dxf  LGUT3 - Copy.dxf  LGUT3.dxf  LGUT4.dxf  LIT.dxf  (+143 more)
assets/dxf_components/overrides/: drain_v__override.dxf  gate_vfo__override.dxf
dexpi2graph_python/: dexpi_xml_renderer.py  dexpitographml.py  dxf_renderer.py  functions.py
memory/: MEMORY.md  project_arrowhead_connection_fix.md
